# cue-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/notvox/: __init__.py  cli.py  client.py
src/notvox/commands/: config.py  devices.py  history.py  modes.py  playback.py  queue.py
src/notvox/utils/: constants.py  formatting.py
